2014-08-24  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/virtual.c (get_page_arguments): Fix nodesklimity option of
	GotoPage.

2014-08-20  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/menus.c (last_saved_pos_hints): Do not initialize structure at
	all, the old initialization was buggy anyway and wrote only zeros.

2014-08-16  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/functions.c (__execute_function):
	Properly handle the has_ref_window_moved flag for ResizeMove and
	ResizeMoveMaximize

2014-08-13  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/move_resize.c (GetResizeArguments)
	(ParseOneResizeArgument):
	new suffixes 'wa' and 'da' for resize arguments to reference the width
	or height of the ewmh working area or ewmh synamic working area.

	* fvwm/expand.c (function_vars):
	(extended_vars):
	(expand_vars_extended):
	New extended variables $[wa.x/y/width/height] and
	$[dwa.x/y/width/height] that retrieve the geometry of the ewmh working
	area or ewmh dynamic working area

	* fvwm/frame.c (__frame_setup_window):
	Only broadcast M_CONFIGURE_WINDOW when the window geometry changes.
	* fvwm/move_resize.c (__resize_window):
	Suppress duplicate M_CONFIGURE_WINDOW broadcasts when the window is
	resized.

2014-08-11  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* NEWS: Update for IconAndSelect... options in FvwmIconMan

2014-08-10  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* INSTALL.fvwm:
	updated install location of man pages

2014-08-01  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/builtins.c (CMD_Beep):
	removed debug code

2014-07-31  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/icons.c (GetIconPicture):
	(ChangeIconPixmap):
	* fvwm/events.c (HandlePropertyNotify):
	fixed compile errors in ICON_DBG macros

2014-07-04  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/ConfigFvwmDefaults:
	Use "WarpToWindow !raise" in WindowListFunc.

	* fvwm/focus.c (warp_to_fvwm_window):